<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kilometrowka</string>
    <string name="raport">Raport</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="action_settings">Ustawienia</string>
    <string name="action_raport">Generuj Raport</string>
    <string name="pokazListeTras">Przeglądaj</string>
    <string name="trasa">Trasa:</string>
    <string name="km">Przejechane:</string>
    <string name="Czykierowca">Jestem:</string>
    <string name="samochod">Samochod:</string>
    <string name="data">Data:</string>
    <string name="delete">Delete:</string>
    <string name="skad">Wpisz miasta:</string>
    <string name="dokad">Dokąd:</string>
    <string name="iloscKm">Ilość kilometrów:</string>
    <string name="zapisz">Zapisz</string>
    <string name="prywatny">Slużbowy</string>
    <string name="publiczny">Prywatny</string>
    <string name="kierowca">Kierowca</string>
    <string name="pasazer">Pasażer</string>
    <string name="addcity">+</string>
    <string name="suma">Suma:</string>
    
    <string name="jednostka">km</string>
    <string name="kierowca_ap">Kierowca auta prywatnego</string>
    <string name="kierowca_app">Kierowca auta prywatnego + 1 pasażer</string>
    <string name="kierowca_as">Kierowca auta służbowego</string>
    <string name="kierowca_asp">Kierowca auta służbowego + 1 pasażer</string>
</resources>