<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    
   <LinearLayout 
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:layout_width="wrap_content"
       
       >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/trasaTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trasa" />

        <TextView
            android:id="@+id/trasaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/trasaTxt"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/kmTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km" />

        <TextView
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/kmTxt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/samochodTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samochod" />

        <TextView
            android:id="@+id/samochod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/samochodTxt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/dataTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data" />

        <TextView
            android:id="@+id/data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/dataTxt" />
    </RelativeLayout>

    </LinearLayout> 
    
   
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       >
       
       <Button 
           android:id="@+id/delete"
           android:layout_marginBottom="10dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="delete"
           
           />
   </LinearLayout>
    
</LinearLayout>

